# swodlr-raster-create

./: .pylintrc  CHANGE  CHANGELOG.md  README.md  build.sh  bumpver.toml  example.env  pyproject.toml
.github/workflows/: build.yml
podaac/swodlr_raster_create/: __main__.py  bootstrap.py  notify_update.py  preflight.py  publish_data.py  queue_update.py  sds_statuses.py  submit_evaluate.py  submit_raster.py  utilities.py  utils.py  wait_for_complete.py
podaac/swodlr_raster_create/schemas/: input.json  jobset.json
schemas/: input.json  jobset.json
terraform/: lambdas.tf  main.tf  messaging.tf  stepfunction.tf  variables.tf
terraform/environments/: ops.env  sit.env  uat.env
tests/: test_bootstrap.py  test_notify_update.py  test_preflight.py  test_publish_data.py  test_queue_update.py  test_submit_evaluate.py  test_submit_raster.py  test_wait_for_complete.py
tests/data/: failed_jobset.json  invalid_sqs.json  success_jobset.json  valid_sqs.json  waiting_jobset.json
