[tool.poetry]
name = "swodlr-raster-create"
version = "0.0.2-alpha9"
description = ""
authors = ["podaac-tva <podaac-tva@jpl.nasa.gov>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "podaac"}]

[tool.poetry.dependencies]
python = "^3.9"
otello = {git = "https://github.com/hysds/otello.git", rev = "develop"}
requests = "^2.28.2"
fastjsonschema = "^2.16.3"
boto3-stubs-lite = {extras = ["s3", "sns"], version = "^1.26.127"}
swodlr-common = {git = "https://github.com/podaac/swodlr-common-py.git", rev = "0.1.1-alpha5"}

[tool.poetry.group.dev.dependencies]
boto3 = "^1.26.92"
pytest = "^7.2.2"
flake8 = "^6.0.0"
bumpver = "^2022.1120"
pylint = "^2.17.0"
python-dotenv = "^1.0.0"

[tool.poetry.scripts]
raster-create = 'podaac.swodlr_raster_create.__main__:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
